--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.18",
     "next-themes": "^0.4.3",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
